# fontColor

./: .gitignore  .qmlls.ini  CMakeLists.txt  LICENSE  ReadMe.md  config.h.in  fontColor.pro  main.cpp  main.qml  qml.qrc  sign.asc
backend/: clipboard.cpp  clipboard.hpp  common.cpp  common.hpp  fontdatabase.cpp  fontdatabase.hpp  sqlhandler.cpp  sqlhandler.hpp  utils.cpp  utils.hpp
components/: TitleText.qml  ToolTipButton.qml
